add buffer to strore last three visited paths, readme.md